--- a/app/templates/work_experience.html
+++ b/app/templates/work_experience.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-    <div class="container text-center mt-5 pt-3">
-        <h4 class="mt-5">Опыт работы</h4>
+<div class="form-style">
+    <div class="form-login">
         <form action="" method="post">
+            <h1>Опыт работы</h1>
             {{ form.hidden_tag() }}
             <p>
                 {{ form.started_working.label }}<br>
@@ -55,4 +55,6 @@
             <p>{{ form.submit() }}</p>
         </form>
     </div>
+    <div class="form-photo"></div>
+</div>
 {% endblock %}
