--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container h-100 d-flex justify-content-center text-center">
-        <div class="container-fluid d-flex align-items-center justify-content-center h-100">
+    <div class="form-style">
+        <div class="form-login">
             <form action="" method="post" novalidate>
                 <h1>Вход</h1>
                 {{ form.hidden_tag() }}
@@ -28,5 +28,6 @@
                 <p>Новый пользователь? <a href="{{ url_for('register') }}">Зарегистрируйтесь!</a></p>
             </form>
         </div>
+        <div class="form-photo"></div>
     </div>
 {% endblock %}
