--- a/app/templates/personal_information.html
+++ b/app/templates/personal_information.html
@@ -2,51 +2,56 @@
 
 
 {% block content %}
-    <div class="container text-center mt-5 pt-3">
-        <h4 class="mt-5">Персональная информация</h4>
-        <form action="" method="post">
-            {{ form.hidden_tag() }}
-            <p>
-                {{ form.first_name.label }}<br>
-                {{ form.first_name(size=32) }}<br>
-                {% for error in form.first_name.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </p>
-            <p>
-                {{ form.surname.label }}<br>
-                {{ form.surname(size=32) }}<br>
-                {% for error in form.surname.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </p>
-            <p>
-                {{ form.patronymic.label }}<br>
-                {{ form.patronymic(size=32) }}<br>
-                {% for error in form.patronymic.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </p>
-            <p>
-                {{ form.date_of_birth.label }}<br>
-                {{ form.date_of_birth(size=32) }}<br>
-                {% for error in form.date_of_birth.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </p>
-            <p>
-                {{ form.gender.label }}<br>
-                {{ form.gender }}
-                <br>
-            </p>
-            <p>
-                {{ form.city_of_residence.label }}<br>
-                {{ form.city_of_residence(size=32) }}<br>
-                {% for error in form.city_of_residence.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </p>
-            <p>{{ form.submit() }}</p>
-        </form>
+    <div class="form-style">
+        <div class="form-login">
+            <form action="" method="post">
+                <h1>Персональная информация</h1>
+                {{ form.hidden_tag() }}
+                <p>
+                    {{ form.city_of_residence.label }}<br>
+                    {{ form.city_of_residence(size=32) }}<br>
+                    {% for error in form.city_of_residence.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ form.phone_number.label }}<br>
+                    {{ form.phone_number(size=32) }}<br>
+                    {% for error in form.phone_number.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ form.email.label }}<br>
+                    {{ form.email(size=32) }}<br>
+                    {% for error in form.email.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ form.about_me.label }}<br>
+                    {{ form.about_me(cols=40, rows=4) }}
+                    {% for error in form.about_me.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ form.knowledge_languages.label }}<br>
+                    {{ form.knowledge_languages(cols=40, rows=4) }}
+                    {% for error in form.knowledge_languages.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ form.citizenship.label }}<br>
+                    {{ form.citizenship(size=32) }}<br>
+                    {% for error in form.citizenship.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>{{ form.submit() }}</p>
+            </form>
+        </div>
+        <div class="form-photo"></div>
     </div>
 {% endblock %}
