--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container h-100 d-flex justify-content-center text-center">
-        <div class="container-fluid d-flex align-items-center justify-content-center h-100">
+    <div class="form-style">
+        <div class="form-login">
             <form action="" method="post">
                 <h1>Регистрация</h1>
                 {{ form.hidden_tag() }}
@@ -37,5 +37,6 @@
                 <p>{{ form.submit() }}</p>
             </form>
         </div>
+        <div class="form-photo"></div>
     </div>
 {% endblock %}
