--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -70,20 +70,11 @@
                 {% endif %}
     </div>
 
-    {% for post in posts %}
-        <div class="post">
-            <div class="post-avatar">
-                <div class="avatar"></div>
-            </div>
-            <div class="post-text">
-                <div class="login">
-                    <a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
-                    <p>{{ post.timestamp.strftime("%d.%m.%Y-%H:%M") }}</p>
-                </div>
-                <p>{{ post.body }}</p>
-            </div>
-        </div>
-    {% endfor %}
+    <div class="post-main">
+        {% for post in posts %}
+        {% include '_post.html' %}
+        {% endfor %}
+    </div>
         
     <div class="page">
         {% if prev_url %}
