--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,8 +19,8 @@
                 <ul class="menu touch">
                     <li class="logo-li"><a class="logo" href="#">Python developer</a></li>
                     <li><a class="element" href="{{ url_for('index') }}">Главная</a></li>
-                    <li><a class="element" href="#">Опыт</a></li>
-                    <li><a class="element" href="#">Контакты</a></li>
+                    <!-- <li><a class="element" href="#experience">Опыт</a></li> -->
+                    <li><a class="element" href="#footer">Контакты</a></li>
                     {% if not current_user.is_anonymous %}
                     <li><a class="element" href="{{ url_for('user', username=current_user.username) }}">Личный профиль</a></li>
                     <li><a class="element" href="{{ url_for('logout') }}">Выйти</a></li>
@@ -37,7 +37,7 @@
     </main>
     <div class="container">
         <footer>
-            <div class="blog-footer">
+            <div id="footer" class="blog-footer">
                 <h1 class="about_me_title">Контакты</h1>
                 <ul class="foot-list">
                     <li><p>+7 (985) 011 22 79</p></li>
