--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,34 +18,34 @@
         </div>
     </section>
 
-    <div class="about_me">
+    <div id="resume" class="about_me">
         <h1 class="about_me_title">Обо мне</h1>
         <p class="about_me_text">{{ svyat_res.basic_information.about_me }}</p>
     </div>
     
     <div class="key_skills">
         <h1 class="key_skills_title">Ключевые навыки</h1>
-        <ul class="key_skills_list">
+        <div class="key_skills_list">
             {% for skill in svyat_res.basic_information.key_skills %}
-                <li><p class="key_skill_elem">{{ skill.skill_tag }}</p></li>
+                <p class="key_skill_elem">{{ skill.skill_tag }}</p>
             {% endfor %}
-        </ul>
+        </div>
         <p class="key_skill_text">{{ svyat_res.basic_information.knowledge_languages }}</p>
     </div>
 
-    <div class="experience">
+    <div id="experience" class="experience">
         <h1>Опыт</h1>
         {% for work in svyat_res.work_experience %}
             <div class="experience-elem">
                 <div class="work-period">
-                    <p>{{ work.organization }}</p>
+                    <p>{{ work.organization }}</p><br>
                     <p>{{ work.region }}</p>
                     <p>{{ work.started_working }}</p>
                     <p>{{ work.ending }}</p>
                 </div>
                 <div class="work-experience">
-                    <p>{{ work.company_field_activity }}</p>
-                    <p>{{ work.post }}</p>
+                    <p>{{ work.company_field_activity }}</p><br>
+                    <p>{{ work.post }}</p><br>
                     <p>{{ work.responsibilities_workplace }}</p>
                 </div>
             </div>
